syntax = "proto3";

message MoveFromServer {
  string GUID = 1;
  uint32 facingDirection = 2;
  uint32 movingDirection = 3;
}
